# gui

./: 1.py  README.md  design.ui  designer.ipynb  designer.py  designer_.py  designer_test.py  designer_test_.py
gui/: pyproject.toml
gui/src/gui/: gui.py
