[tool.poetry]
name = "gui"
version = "0.1.0"
description = ""
authors = ["nautvanderpoel <135599215+nautvanderpoel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "gui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
